test/integration/bad/new/ill-formed-statement25.stan
transformed data { if ( T) ; else void